--- a/src/components/layout/styles/Button.module.css
+++ b/src/components/layout/styles/Button.module.css
@@ -17,3 +17,39 @@
 .regular:hover {
     background-color: app_lightblue;
 }
+
+.regular::-moz-focus-inner {
+    border: 0;
+}
+
+.round {
+    background-color: app_lightblue;
+    cursor:pointer;
+    border: 0;
+    border-radius: 50%;
+    margin-top: 10px;
+    font-size: 20px;
+    width: 60px;
+    height: 60px;
+    outline: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+.round::-moz-focus-inner {
+    border: 0;
+}
+
+.round:hover {
+    background-color: app_blue;
+}
+
+.round:active {
+    padding: 0px;
+  }
+
+.roundimage{
+    width: 50px;
+    height: 50px;
+}
