--- a/src/components/layout/styles/Button.module.css
+++ b/src/components/layout/styles/Button.module.css
@@ -22,7 +22,7 @@
     border: 0;
 }
 
-.round {
+.round_off {
     background-color: app_lightblue;
     cursor:pointer;
     border: 0;
@@ -37,19 +37,24 @@
     justify-content: center
 }
 
-.round::-moz-focus-inner {
+.round_off::-moz-focus-inner {
     border: 0;
 }
 
-.round:hover {
+.round_off:hover {
     background-color: app_blue;
 }
 
-.round:active {
+.round_off:active {
     padding: 0px;
   }
 
 .roundimage{
     width: 50px;
     height: 50px;
+}
+
+.round_on {
+    composes: round_off;
+    background-color: white;
 }
