--- a/src/components/layout/styles/Field.module.css
+++ b/src/components/layout/styles/Field.module.css
@@ -6,6 +6,7 @@
     background-color: app_lightgray;
     width: 320px;
     height: 50px;
+    padding: 0;
     border: none;
     border-radius: 4px;
     font-size: 16px;
