--- a/src/components/layout/styles/Login.module.css
+++ b/src/components/layout/styles/Login.module.css
@@ -11,3 +11,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media only screen and (max-width: 500px) {
+    .container {
+        width: 95vw;
+    }
+}
