--- a/src/components/layout/styles/App.module.css
+++ b/src/components/layout/styles/App.module.css
@@ -1,9 +1,19 @@
 @value colors: './colors.css';
 @value app_blue from colors;
 
-.container {
+.containerlight {
     background-color: app_blue;
     background-image: linear-gradient(app_blue, #4BA6FF, #A5D3FF, #FFFFFF);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.containerdark {
+    background-color: #1e1f26;
     width: 100vw;
     height: 100vh;
     display: flex;
