--- a/src/components/layout/styles/App.module.css
+++ b/src/components/layout/styles/App.module.css
@@ -21,3 +21,16 @@
     align-items: center;
     justify-content: center;
 }
+
+.brightness {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border: 0;
+    background-image: url("../images/brightness.svg");
+    background-size: 100%;
+    background-color: Transparent;
+}
