--- a/src/components/layout/styles/colors.css
+++ b/src/components/layout/styles/colors.css
@@ -3,3 +3,6 @@
 @value app_darkgray #747d8c;
 @value app_gray #b0b6bd;
 @value app_lightgray #f1f2f6;
+@value app_flatdark #1e1f26;
+@value app_flatmediumdark #2d303a;
+@value app_flatlightdark #444857;
