--- a/src/components/layout/styles/Field.module.css
+++ b/src/components/layout/styles/Field.module.css
@@ -1,9 +1,7 @@
 @value colors: './colors.css';
-@value app_darkgray, app_lightgray from colors;
+@value app_darkgray, app_flatlightdark, app_lightgray from colors;
 
-.regularlight {
-    composes: dark from './Text.module.css';
-    background-color: app_lightgray;
+.regular {
     width: 320px;
     height: 50px;
     padding: 0;
@@ -11,33 +9,29 @@
     border-radius: 4px;
     font-size: 16px;
     text-align: center;
+}
+
+.regularlight {
+    composes: dark from './Text.module.css';
+    composes: regular;
+    background-color: app_lightgray;
 }
 
 .regulardark {
     composes: white from './Text.module.css';
-    background-color: #444857;
-    width: 320px;
-    height: 50px;
-    padding: 0;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    text-align: center;
+    composes: regular;
+    background-color: app_flatlightdark;
 }
 
-.regular::placeholder {
+.regulardark::placeholder {
     color: white;
 }
 
-.regular::-moz-placeholder {
+.regulardark::-moz-placeholder {
     color: white;
     opacity: 1;
 }
 
-.regular:-moz-placeholder {
-    color: white;
-}
-
-.regular::-webkit-input-placeholder {
+.regulardark::-webkit-input-placeholder {
     color: white;
 }
