--- a/src/components/layout/styles/Login.module.css
+++ b/src/components/layout/styles/Login.module.css
@@ -1,15 +1,20 @@
-.containerdark {
-    background-color: #2d303a;
+@value colors: './colors.css';
+@value app_flatmediumdark from colors;
+
+.container {
     width: 400px;
     height: 400px;
     border-radius: 4px;
 }
 
+.containerdark {
+    composes: container;
+    background-color: app_flatmediumdark;
+}
+
 .containerlight {
+    composes: container;
     background-color: white;
-    width: 400px;
-    height: 400px;
-    border-radius: 4px;
 }
 
 .innercontainer {
