--- a/src/components/layout/styles/Slider.module.css
+++ b/src/components/layout/styles/Slider.module.css
@@ -1,85 +1,43 @@
 @value colors: './colors.css';
 @value app_blue, app_lightblue, app_lightgray from colors;
 
-.sliderdark {
+.slider {
   -webkit-appearance: none;
   width: 300px;
   height: 15px;
   border-radius: 10px;
-  background-color: #2d303a;
   outline: 0;
   -webkit-transition: .2s;
   transition: opacity .2s;
-  opacity: 1.0;
+  background-color: app_lightblue;
+  opacity: 0.8;
+}
+  
+.slider:hover {
+  opacity: 1;
+ }
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: white;
+  cursor: pointer;
+  box-shadow: 0px 0px 5px 1px rgba(30,144,255,0.37);
+  border: 0;
 }
 
-.sliderlight {
-    -webkit-appearance: none;
-    width: 300px;
-    height: 15px;
-    border-radius: 10px;
-    background-color: app_lightblue;
-    outline: 0;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    opacity: 0.7;
-    box-shadow: 0px 0px 5px 1px rgba(30,144,255,0.37);
-  }
+.slider::-moz-focus-outer {
+  border: 0;
+}
   
-  .sliderdark:hover {
-    opacity: 1;
-  }
-
-  .sliderlight:hover {
-    opacity: 1;
-  }
-  
-  .sliderdark::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: white;
-    cursor: pointer;
-    box-shadow: 0px 0px 5px 1px rgba(30,144,255,0.37);
-    border: 0;
-  }
-
-  .sliderlight::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: white;
-    cursor: pointer;
-    box-shadow: 0px 0px 5px 1px rgba(30,144,255,0.37);
-    border: 0;
-  }
-
-.sliderdark::-moz-focus-outer {
-    border: 0;
-  }
-
-  .sliderlight::-moz-focus-outer {
-    border: 0;
-  }
-  
-  .sliderdark::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: white;
-    cursor: pointer;
-    border: 0;
-  }
-
-  .sliderlight::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: white;
-    cursor: pointer;
-    border: 0;
-  }
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: white;
+  cursor: pointer;
+  border: 0;
+}
